test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void/void_for_loop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[116]:
  int
  identifier(putchar)
  (
  int
  identifier(c)
  )
  ;
  int
  identifier(letter)
  ;
  void
  identifier(initialize_letter)
  (
  void
  )
  {
  identifier(letter)
  =
  const char('Z')
  ;
  }
  void
  identifier(decrement_letter)
  (
  void
  )
  {
  identifier(letter)
  =
  identifier(letter)
  -
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  identifier(initialize_letter)
  (
  )
  ;
  identifier(letter)
  >=
  const char('A')
  ;
  identifier(letter)
  =
  identifier(letter)
  -
  const int(1)
  )
  {
  identifier(putchar)
  (
  identifier(letter)
  )
  ;
  }
  for
  (
  identifier(letter)
  =
  const char('A')
  ;
  identifier(letter)
  <=
  const int(90)
  ;
  (
  void
  )
  (
  identifier(letter)
  =
  identifier(letter)
  +
  const int(1)
  )
  )
  {
  identifier(putchar)
  (
  identifier(letter)
  )
  ;
  }
  for
  (
  identifier(initialize_letter)
  (
  )
  ;
  identifier(letter)
  >=
  const int(65)
  ;
  identifier(decrement_letter)
  (
  )
  )
  {
  identifier(putchar)
  (
  identifier(letter)
  )
  ;
  }
  return
  const int(0)
  ;
  }
