test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_to_void_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  extern
  void
  identifier(v1)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(v1)
  =
  (
  void
  )
  const int(0)
  ;
  return
  const int(0)
  ;
  }
